# mars

./: .gitignore  pyproject.toml  requirements.txt
db/: README.md
mars/: main.py
mars/data/: category.py  db_session.py  jobs.py  news.py  users.py
mars/forms/: news.py  user.py
mars/templates/: base.html  index.html  login.html  news.html  register.html
