[tool.poetry]
name = "mars"
version = "0.1.0"
description = ""
authors = ["Mark Meliksetyan <markmelix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.6"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
flask-login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
